--- a/MyOpenGL/en.lproj/MainStoryboard.storyboard
+++ b/MyOpenGL/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,125 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12B19" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--My OpenGL View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="MyOpenGLViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="QQq-b9-IsS">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="optionCell" id="Biz-oR-BzG" customClass="optionCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Test" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wu-8a-zd3">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="0wu-8a-zd3" secondAttribute="trailing" constant="20" type="default" id="4gn-e3-Eim"/>
+                                            <constraint firstItem="0wu-8a-zd3" firstAttribute="top" secondItem="Biz-oR-BzG" secondAttribute="top" constant="11" id="NZ1-98-R0X"/>
+                                            <constraint firstItem="0wu-8a-zd3" firstAttribute="leading" secondItem="Biz-oR-BzG" secondAttribute="leading" constant="20" type="default" id="nN0-Mk-lIX"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="mainLabel" destination="0wu-8a-zd3" id="UFW-gL-04w"/>
+                                            <segue destination="JrJ-75-nX6" kind="modal" identifier="OpenGLContextViewSegue" id="70g-69-JpX"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="2" id="pko-w4-rAl"/>
+                                    <outlet property="delegate" destination="2" id="bd1-c0-Mhg"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QQq-b9-IsS" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="7Cl-0G-5Bh"/>
+                            <constraint firstItem="QQq-b9-IsS" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="Y8E-AP-cXa"/>
+                            <constraint firstItem="QQq-b9-IsS" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="v5b-6h-o99"/>
+                            <constraint firstItem="QQq-b9-IsS" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="zKU-Gm-hGs"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="optionsTableView" destination="QQq-b9-IsS" id="3JA-5A-Qn5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="31" y="118"/>
+        </scene>
+        <!--OpenGL Context View Controller-->
+        <scene sceneID="474-aJ-lpA">
+            <objects>
+                <viewController id="JrJ-75-nX6" customClass="OpenGLContextViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NMj-NI-Dm6">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D0w-Li-k0t">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Bxo-ve-b7C"/>
+                                    <constraint firstAttribute="width" constant="275" id="GbA-49-XPe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="D0w-Li-k0t" firstAttribute="leading" secondItem="NMj-NI-Dm6" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="nzk-jw-MeZ"/>
+                            <constraint firstItem="D0w-Li-k0t" firstAttribute="centerY" secondItem="NMj-NI-Dm6" secondAttribute="centerY" type="default" id="vrx-hC-jsi"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="aLi-hp-jjP"/>
+                    <connections>
+                        <outlet property="mainLabel" destination="D0w-Li-k0t" id="mm6-3j-wvu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Va-iW-55Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="504" y="151"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="MyOpenGLViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MyOpenGLViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="optionsTableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="OpenGLContextViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OpenGLContextViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="mainLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="optionCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/optionCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="mainLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
